@@ -718,6 +718,14 @@ static void load_settings(void)
             } else {
                 LOG(llevError, "load_settings: unknown value for allow_denied_spells_writing: %s\n", cp);
         }
+    } else if ( !strcasecmp( buf, "allow_broken_converters" ) ) {
+            if (!strcasecmp(cp, "on") || !strcasecmp(cp, "true")) {
+                settings.allow_broken_converters = TRUE;
+            } else if (!strcasecmp(cp, "off") || !strcasecmp(cp, "false")) {
+                settings.allow_broken_converters = FALSE;
+            } else {
+                LOG(llevError, "load_settings: unknown value for allow_broken_converters: %s\n", cp);
+        }
     } else {
 	    LOG(llevError,"Unknown value in settings file: %s\n", buf);
 	}
